--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "author": "Pakanon Pantisawat",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "consola": "^2.15.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "logrocket": "^1.0.14",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
