--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@types/jest": "^26.0.20",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
+    "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
