--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "tsyringe": "^4.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
