--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "morgan": "^1.10.0",
-    "tsyringe": "^4.4.0"
+    "pg": "^8.5.1",
+    "tsyringe": "^4.4.0",
+    "zapatos": "^3.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
