--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jest": "^26.0.20",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
+    "@types/pg": "^7.14.9",
     "@types/supertest": "^2.0.10",
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
