--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "supertest": "^6.1.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
 }
