--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon --config nodemon.json src/index.ts",
     "dev:debug": "npm run dev -- --inspect-brk",
     "clean": "rm -rf dist",
+    "schema:generate": "npx zapatos",
     "prestart": "npm run clean && tsc",
     "start": "node dist"
   },
