--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@types/cors": "^2.8.9",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.20",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
     "@types/pg": "^7.14.9",
     "@types/supertest": "^2.0.10",
     "cross-env": "^7.0.3",
+    "faker": "^5.2.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.2",
