--- a/package.json
+++ b/package.json
@@ -36,14 +36,19 @@
     "@types/node": "^14.14.22",
     "@types/pg": "^7.14.9",
     "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "cross-env": "^7.0.3",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
     "faker": "^5.2.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
 }
