--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "tsyringe": "^4.4.0",
+    "uuid": "^8.3.2",
     "zapatos": "^3.3.0"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/node": "^14.14.22",
     "@types/pg": "^7.14.9",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "cross-env": "^7.0.3",
