added git hooks script and preinstall script for hooks initialization

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend API for event platform",
   "main": "index.js",
   "scripts": {
+    "preinstall": "./scripts/init-hooks.sh",
     "test": "cross-env NODE_ENV=test jest",
     "compile": "tsc",
     "dev": "nodemon --config nodemon.json src/index.ts",
